# Back_Poetry

./: .gitignore
lite-thinking/: README.md  pyproject.toml
lite-thinking/backend/apps/autenticacion/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  views.py
lite-thinking/backend/apps/autenticacion/migrations/: 0001_initial.py
lite-thinking/backend/apps/empresas/: admin.py  models.py  serializers.py  urls.py  views.py
lite-thinking/backend/apps/empresas/migrations/: 0001_initial.py
lite-thinking/backend/apps/ia/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
lite-thinking/backend/apps/ia/migrations/: 0001_initial.py
lite-thinking/backend/apps/inventario/: admin.py  models.py  reports.py  serializers.py  urls.py  views.py
lite-thinking/backend/apps/inventario/migrations/: 0001_initial.py  0002_remove_inventario_cantidad_reservada_no_negativa_and_more.py
lite-thinking/backend/apps/productos/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
lite-thinking/backend/apps/productos/migrations/: 0001_initial.py  0002_alter_producto_codigo.py
lite-thinking/backend/config/: asgi.py  settings.py  urls.py  wsgi.py
lite-thinking/dominio/entidades/: __init__.py  conversacion.py  empresa.py  inventario.py  producto.py  usuario.py
lite-thinking/dominio/excepciones/: __init__.py  dominio_excepciones.py
